[package]
name = "os"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5"
downcast-rs = { version = "1.2.0", default-features = false }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3.9"

# exit when panic occur
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"