[package]
name = "os"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"
description = "zCore on riscv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5"
downcast-rs = { version = "1.2.0", default-features = false }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3.9"
bitflags = "1.2"
trapframe = "0.5.1"
numeric-enum-macro = "0.2"
acpi = "1.0.0"
git-version = "0.3"
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
naive-timer = "0.1.0"
executor = { git = "https://github.com/rcore-os/executor.git", rev = "a2d02ee9" }
hashbrown = "0.7"
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
xmas-elf = { version = "0.7", optional = true }
region-alloc = { git = "https://github.com/rzswh/region-allocator", rev = "122c7a71" }

[dev-dependencies]


# exit when panic occur
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"